--- a/src/App.css
+++ b/src/App.css
@@ -32,16 +32,20 @@ body {
 }
 
 .h11 {
-  color: rgb(231, 117, 11);
+  color: rgb(210, 199, 238);
+  font-weight: 1000;
+
 }
 
 .h12 {
-  color: rgb(227, 160, 3);
+  color: rgb(178, 172, 192);
+  font-weight: 1000;
   
 }
 
 .h13 {
-  color: rgb(241, 137, 0);
+  color: rgb(255, 255, 255);
+  font-weight: 1000;
 }
 
 .homeintro {
