--- a/src/App.css
+++ b/src/App.css
@@ -32,19 +32,22 @@ body {
 }
 
 .h11 {
-  color: rgb(210, 199, 238);
+  color: rgb(255, 255, 255);
+  text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
   font-weight: 1000;
 
 }
 
 .h12 {
-  color: rgb(178, 172, 192);
+  color: rgb(255, 255, 255);
+  text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
   font-weight: 1000;
   
 }
 
 .h13 {
   color: rgb(255, 255, 255);
+  text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
   font-weight: 1000;
 }
 
