--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,11 @@ body {
 }
 
 .home {
-  background-image: url("./Images/pexels-joshsorenson-1714208.jpg");
+  background-image: url("./Images/pexels-joshsorenson-1714208\ \(1\).webp");
   min-height: 100vh;
   background-size: cover;
   background-position: center;
+  object-fit: cover;
   width: 100%;
   position: relative;
   z-index: 1;
