--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
   min-height: 100vh;
   background-size: cover;
   background-position: center;
-  object-fit: cover;
+  /* object-fit: cover; */
   width: 100%;
   position: relative;
   z-index: 1;
